fix a layout issue

--- a/packages/client/src/index.css
+++ b/packages/client/src/index.css
@@ -1,5 +1,9 @@
 @import "tailwindcss";
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   margin: 0;
 }
